force-app/main/default/objects/Takeoff_Line__c/Takeoff_Line__c.object-meta.xml
<CustomObject>
    <label>Takeoff Line</label>
    <nameField>
        <displayFormat>TKL-{0000}</displayFormat>
        <label>Takeoff Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Takeoff Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>