force-app/main/default/objects/Takeoff_Line__c/fields/BMG_Line__c.field-meta.xml
<CustomField>
    <fullName>BMG_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BMG Line</label>
    <referenceTo>Builder_Pricing_Line__c</referenceTo>
    <relationshipLabel>Takeoff Lines (BMG)</relationshipLabel>
    <relationshipName>BMG_Line_Takeoff_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>