force-app/main/default/objects/Takeoff_Line__c/fields/Determination__c.field-meta.xml
<CustomField>
    <fullName>Determination__c</fullName>
    <label>Determination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match</fullName>
                <default>true</default>
                <label>Match</label>
            </value>
            <value>
                <fullName>Variance</fullName>
            </value>
            <value>
                <fullName>Substitution</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>