force-app/main/default/objects/Takeoff_Line__c/fields/Execution_Scope__c.field-meta.xml
<CustomField>
    <fullName>Execution_Scope__c</fullName>
    <description>Real child execution scope routing for standard WorkOrder split.</description>
    <label>Execution Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Install</fullName>
                <default>true</default>
                <label>Install</label>
            </value>
            <value>
                <fullName>Grading</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Aqua</fullName>
            </value>
            <value>
                <fullName>Other / Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>