force-app/main/default/objects/Takeoff_Line__c/fields/Material_Substitution__c.field-meta.xml
<CustomField>
    <fullName>Material_Substitution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Substitution</label>
    <type>Checkbox</type>
</CustomField>