force-app/main/default/objects/Takeoff_Line__c/fields/Measured_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Measured_Quantity__c</fullName>
    <label>Measured Quantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>