force-app/main/default/objects/Takeoff_Line__c/fields/PO_Qty__c.field-meta.xml
<CustomField>
    <fullName>PO_Qty__c</fullName>
    <label>PO Quantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>