force-app/main/default/objects/Takeoff_Line__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <description>Line-level review state used to control whether proposed takeoff scope can become executable Work Order scope.</description>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
                <default>true</default>
                <label>Proposed</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Discrepancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>