force-app/main/default/objects/Takeoff_Line__c/fields/Source_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Source_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Standard OrderItem source line that created this takeoff line.</description>
    <label>Source Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Takeoff Lines</relationshipLabel>
    <relationshipName>SourceOrderItemTakeoffLines</relationshipName>
    <type>Lookup</type>
</CustomField>