force-app/main/default/objects/Takeoff_Line__c/fields/Substitution__c.field-meta.xml
<CustomField>
    <fullName>Substitution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Substitution Required</label>
    <type>Checkbox</type>
</CustomField>