force-app/main/default/objects/Takeoff_Line__c/fields/Substitution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Substitution_Notes__c</fullName>
    <label>Substitution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>