force-app/main/default/objects/Takeoff_Line__c/fields/Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Takeoff__c</fullName>
    <label>Takeoff</label>
    <referenceTo>Takeoff__c</referenceTo>
    <relationshipLabel>Takeoff Lines</relationshipLabel>
    <relationshipName>Takeoff_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>