force-app/main/default/objects/Takeoff_Line__c/fields/Verified_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Verified_Quantity__c</fullName>
    <label>Verified Quantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>